<resources>
    <string name="app_name">Social Media App</string>
    <string name="get_started">Get Started</string>
    <string name="connect_share_inspire_your_world_awaits">Connect, Share, Inspire Your World Awaits!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_with_us">Join with us!</string>
    <string name="create_your_account_and_start_the_conversation">Create your account and start the conversation</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_password">Create password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password</string>
    <string name="don_t_worry_we_ve_got_your_back">Don\'t worry, we/ve got your back</string>
    <string name="enter_your_email_to_reset_password">Enter your email to reset password</string>
    <string name="reset_password">Reset password</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="back_to">Back to</string>
    <string name="orange">Orange</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="adding_new_content">Adding new content</string>
    <string name="reo_peko">reo_peko</string>
    <string name="like_number">4.5K</string>
    <string name="comment_number">1.2K</string>
    <string name="share_number">1.1K</string>
    <string name="milet_music">milet_music</string>
    <string name="milet">milet</string>
    <string name="user_bio">Singer songwritter from Tokyo</string>
    <string name="_750">750</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="_339">339</string>
    <string name="followers">followers</string>
    <string name="_675k">675K</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="bookmark">Bookmark</string>
    <string name="notification_sample">%1$s shared a post</string>
    <string name="like_comment">%1$s likes</string>
    <string name="settings_and_activity">Settings and activity</string>
    <string name="add_account">Add account</string>
    <string name="log_out">Log out</string>
    <string name="sign_in">Sign in</string>
    <string name="password_not_match">Password not match</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="the_password_must_be_different_than_before">The password must be different than before</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_profile_picure">Edit profile picure</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="bio">Bio</string>
    <string name="done">Done</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="block">Block</string>
    <string name="report">report</string>
    <string name="about">about</string>
    <string name="more">more</string>
    <string name="Whats_happening">What\'s happening?</string>
    <string name="post">Post</string>
    <string name="image">Image</string>
    <string name="text_edit">Text Edit</string>
    <string name="adjust">Adjust</string>
    <string name="caption">Caption</string>
    <string name="followed">Followed</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="comment">Comment</string>
    <string name="new_notification">New</string>
    <string name="early_notification">Early</string>
    <string name="camera">Camera</string>
    <string name="remove_your_current_picture">Remove your current picture</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="set_default_profile_picture">Set default profile picture</string>
    <string name="timestamp">Timestamp</string>
    <string name="_message">Message...</string>

</resources>