<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />

    <item android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        />

    <item android:id="@+id/addFragment"
        android:title="@string/add"
        android:icon="@drawable/id_circle_add"
        />

    <item android:id="@+id/notificationFragment"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification"
        />

    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_user"
        />

</menu>