<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.login.ForgetPasswordFragment">

    <ImageView
        android:id="@+id/red_circle"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:background="@drawable/ic_orange_1"
        android:layout_gravity="end"
        android:layout_marginEnd="-170dp"
        android:layout_marginTop="-170dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        />
    <ImageView
        android:id="@+id/blue_circle"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:src="@drawable/ic_orange_2"
        android:layout_marginBottom="-135dp"
        android:layout_marginStart="-135dp"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:id="@+id/rhe16q287z3g"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/red_circle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"

        />
    <TextView
        android:id="@+id/rjfusp4ujoz9"
        android:textColor="#4D4D4D"
        android:textSize="15sp"
        android:layout_below="@+id/rhe16q287z3g"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/don_t_worry_we_ve_got_your_back"
        />
    <TextView
        android:textColor="#4D4D4D"
        android:textSize="15sp"
        android:layout_below="@+id/rjfusp4ujoz9"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_your_email_to_reset_password"
        />

    <LinearLayout
        android:id="@+id/rf2dx1cirq0v"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="14dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_below="@+id/rjfusp4ujoz9">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/undraw_mobile_login"/>

        <EditText
            android:id="@+id/email_edt"
            android:textColor="#6E2424"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/custom_login_edit_text"
            android:drawableStart="@drawable/ic_email"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:textColorHint="@color/text_hint_color"
            android:hint="@string/email"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_pwd_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:cornerRadius="20dp"
            android:text="@string/reset_password"
            android:textSize="25sp"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to"
                android:textColor="@color/black"
                android:textSize="13sp"
                />

            <TextView
                android:id="@+id/back_to_log_in_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>