<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.acitivity.SettingActivity"
    android:orientation="vertical"
    android:background="@color/white_gray">

    <include
        android:id="@+id/tool_bar_pf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="17sp"
            android:textColor="@color/gray"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/add_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_account"
            android:textSize="17sp"
            android:textColor="@color/blue"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textSize="17sp"
            android:textColor="@color/red"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</LinearLayout>