<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.fragment.edit.EditProfileFragment">

    <include
        android:id="@+id/tool_bar_ed_pf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_toolbar"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/milet_pfp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_picure"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue"/>

    <LinearLayout
        android:id="@+id/name"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="0.25"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@id/user_name"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="0.25"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gender"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="0.25"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/gender_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bio"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="0.25"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/bio_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>